changed spacing issues

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -188,7 +188,6 @@ section#women_gallery > ul > li,
 section#girls > ul > li {
 	display: block;
 	width: 100%;
-	margin-bottom: 1em;
 	overflow: hidden;
 	background-color: white;
 	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
@@ -210,17 +209,24 @@ section#women_gallery > ul > li img,
 section#girls > ul > li img {
 	display: block;
 	margin: 0 auto;
+	width: 100%;
 }
 
 section#women_gallery > ul > li h5,
 section#girls > ul > li h5 {
-	margin: 0.5em 0;
+	font-size: 1.2em;
+	padding-top: 25px;
+	margin: 0;
 }
 
 section#women_gallery > ul > li ul,
 section#girls > ul > li ul {
 	list-style: disc;
 	text-align: right;
+	padding-right: 45px;
+	padding-left: 25px;
+	padding-top: 15px;
+	padding-bottom: 25px;
 }
 
 /*
